force-app/main/default/objects/vlocity_cmt__UserCalendar__c/vlocity_cmt__UserCalendar__c.object-meta.xml
<CustomObject>
    <label>User Calendar</label>
    <nameField>
        <displayFormat>UC-{0000}</displayFormat>
        <label>User Calendar</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>