force-app/main/default/objects/vlocity_cmt__UserCalendar__c/fields/vlocity_cmt__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OperatingHoursId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>vlocity_cmt__OperatingHours__c</referenceTo>
    <relationshipLabel>User Calendars</relationshipLabel>
    <relationshipName>UserCalendars</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>